--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,8 +15,9 @@ jobs:
       - run: pip install -r requirements.txt
 
       # run tests
-      - run: pip install pytest
-      - run: pytest --verbose
+      - run: pip install pytest coverage
+      - run: coverage run -m pytest --verbose
+      - run: coverage report *.py
 
       # code style checks
       - run: pip install pycodestyle
